Changed models, minor updates - new database schema implemented - changed bootstrap markdown

--- a/HakatonProject/HakatonProject.csproj
+++ b/HakatonProject/HakatonProject.csproj
@@ -13,10 +13,12 @@
         <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.8"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.8"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.8"/>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0"/>
+        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.0.0"/>
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="FrontendMigration\" />
+        <Folder Include="FrontendMigration\"/>
     </ItemGroup>
 
 </Project>
