Started connecting frontend to backend

--- a/HakatonProject/HakatonProject.csproj
+++ b/HakatonProject/HakatonProject.csproj
@@ -20,6 +20,8 @@
 
     <ItemGroup>
         <Folder Include="FrontendMigration\" />
+        <Folder Include="wwwroot\html\assets\" />
+        <Folder Include="wwwroot\html\styles\" />
     </ItemGroup>
 
 </Project>
